CAY-2377 Cleanup deprecated code.
CAY-2391 cdbimport: add option to skip user-defined relationships
CAY-2393 Add sqlserver-docker profile to automate tests on SQLServer
CAY-2394 Upgrade to Apache Velocity 2.0
CAY-2395 cdbimport: add option to create project file
CAY-2396 Upgrade maven-assembly-plugin to 3.1.0
CAY-2403 Extract eventbridges to top level
CAY-2404 Move itests to maven-plugins

Bug Fixes:

CAY-2370 ValueObjectType for byte[] fails lookup
CAY-2380 ReferenceMap should not store or return null values
CAY-2381 cgen: meaningful PK with boxed type ends up with primitive type in generated source
CAY-2382 Lack of synchronization in DataContext serialization
CAY-2387 Can't select byte[] property with ColumnSelect
CAY-2388 Modeler: Visualization issues with undo/redo actions for attributes and relationships
CAY-2389 DbEntity qualifier with DbPath expression translates into wrong SQL
CAY-2392 Modeler: Unable to remove DataNode
CAY-2397 Modeler: Unable to set enum:value as Entity qualifier
CAY-2401 Modeler: NPE in ObjEntity sync action
CAY-2405 Broken prefetch of entity with inheritance and attribute with custom java type

----------------------------------
Release: 4.1.M1
Date:
----------------------------------
Changes/New Features:

CAY-2152 Redesign project file upgrade system
CAY-2329 Update project dependencies
CAY-2330 Field based data objects
CAY-2335 New XML loading/saving mechanics with support of plugable handlers
CAY-2336 Support for comments in Modeler
CAY-2339 Compatibility module to support old versions of projects at runtime
CAY-2344 Modeler: Save ER-Graph and class diagram
CAY-2345 Own template renderer as a replacement for Velocity
CAY-2346 Field-based data object with Map-based storage fallback
CAY-2351 Remove commons-collections usage completely

Bug Fixes:

CAY-2312 Modeler: Undo does not work for checkboxes
CAY-2318 Modeler: Query. Exception after Undo clicking
CAY-2319 Modeler: Embeddable > Attributes. Undo does not cancel pasted objects